[issue #197] - upgrade to java 21 and cleanup